src/widgets/skill-card/skill-card.module.css
.card {
  background-color: #f9faf7;
  border-radius: 12px;
  width: 324px;
  height: 368px;
}

.content {
  display: flex;
  flex-direction: column;
  gap: 20px;
  padding: 20px;
}

.header {
  display: flex;
  justify-content: space-between;
  align-items: flex-start;
}

.section {
  display: flex;
  flex-direction: column;
  gap: 8px;
  width: 284px;
}

.skills {
  display: flex;
  flex-direction: column;
  gap: 12px;
}

.sectionTitle {
  font-family: 'Roboto', 'Helvetica Neue', 'Arial', sans-serif;
  font-size: 16px;
  font-weight: 500;
  color: #253017;
}

.tags {
  display: flex;
  gap: 8px;
  overflow: hidden;
  white-space: nowrap;
  max-width: 100%; 
}

.buttonWrapper {
  margin-top: 8px;
}

